--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -77,8 +77,8 @@ jobs:
           image-report: "report.json"
           patched-tag: "patched"
           custom-socket: "$SOCKET"
-          # buildkit-version: "v0.12.4" # optional, default is latest
-          # copa-version: "0.6.0" # optional, default is latest
+          buildkit-version: "v0.12.4" # optional, default is latest
+          copa-version: "0.3.0" # optional, default is latest
 
         # see https://github.com/docker/login-action#usage for other registries
       - name: Login to GHCR
