--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -43,6 +43,25 @@ jobs:
           vuln_count=$(jq 'if .Results then [.Results[] | select(.Class=="os-pkgs" and .Vulnerabilities!=null) | .Vulnerabilities[]] | length else 0 end' "$report_file")
           echo "vuln_count=$vuln_count" >> $GITHUB_OUTPUT
 
+      - name: Set up Docker
+        uses: crazy-max/ghaction-setup-docker@v3
+        with:
+          daemon-config: |
+              {
+              "debug": true,
+              "experimental": true,
+                  "features": {
+                  "containerd-snapshotter": true
+                  }
+              }
+
+      - name: Get socket path
+        run: |
+            url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
+            socket_path=$(echo "$url" | awk -F// '{print $2}')
+            echo "$socket_path"
+            echo "SOCKET=$socket_path" >> $GITHUB_ENV
+
         # copa action will only run if there are vulnerabilities
       - name: Run Copa action
         if: steps.vuln_count.outputs.vuln_count != '0'
@@ -58,6 +77,7 @@ jobs:
           patched-tag: "patched"
           # buildkit-version: "v0.12.4" # optional, default is latest
           # copa-version: "0.6.0" # optional, default is latest
+          custom-socket: "$SOCKET"
 
         # see https://github.com/docker/login-action#usage for other registries
       - name: Login to GHCR
@@ -73,5 +93,5 @@ jobs:
         if: steps.login.conclusion == 'success'
         run: |
           # retag if needed
-          docker tag ${{ steps.copa.outputs.patched-image }} ghcr.io/project-copacetic/copa-action/test/${{ steps.copa.outputs.patched-image }}
-          docker push ghcr.io/project-copacetic/copa-action/test/${{ steps.copa.outputs.patched-image }}
+          docker tag ${{ steps.copa.outputs.patched-image }} ghcr.io/ashnamehrotra/copa-action/test/${{ steps.copa.outputs.patched-image }}
+          docker push ghcr.io/ashnamehrotra/copa-action/test/${{ steps.copa.outputs.patched-image }}
