--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,21 +33,24 @@ jobs:
           trivy image --vuln-type os --ignore-unfixed -f json -o /tmp/opa.0.46.0.json docker.io/openpolicyagent/opa:0.46.0
 
       - name: Get latest copa version
+        id: copa-version
         run: |
           latest_tag=$(curl --retry 5 -s "https://api.github.com/repos/project-copacetic/copacetic/releases/latest" | jq -r '.tag_name')
           version=${latest_tag:1}
           echo "Copa version: $version"
-          echo "COPA_VERSION=$version" >> $GITHUB_ENV
+          echo "copa-version=$version" >> $GITHUB_OUTPUT
 
       - name: Install Copa
         run: |
-            curl --retry 5 -fsSL -o copa.tar.gz https://github.com/project-copacetic/copacetic/releases/download/v$COPA_VERSION/copa_$COPA_VERSION_linux_amd64.tar.gz
-            tar -zxvf copa.tar.gz
-            cp copa /usr/local/bin/
+          version=${{ steps.copa-version.outputs.copa-version }}
+          curl --retry 5 -fsSL -o copa.tar.gz https://github.com/project-copacetic/copacetic/releases/download/v$version/copa_$version_linux_amd64.tar.gz
+          tar -zxvf copa.tar.gz
+          cp copa /usr/local/bin/
 
       - name: Build Copa Action Image
         run: |
-          docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
+          version=${{ steps.copa-version.outputs.copa-version }}
+          docker build --build-arg copa_version=$version -t copa-action .
 
       - name: Set up Docker
         if: matrix.test-type == 'custom-socket'
