--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
           latest_tag=$(curl --retry 5 -s "https://api.github.com/repos/project-copacetic/copacetic/releases/latest" | jq -r '.tag_name')
           version=${latest_tag:1}
           echo "Copa version: $version"
-          echo "copa-version=$version" >> $GITHUB_OUTPUT
+          echo "$version=$copa-version" >> $GITHUB_OUTPUT
 
       - name: Install Copa
         run: |
