--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,7 +38,7 @@ jobs:
           latest_tag=$(curl --retry 5 -s "https://api.github.com/repos/project-copacetic/copacetic/releases/latest" | jq -r '.tag_name')
           version=${latest_tag:1}
           echo "Copa version: $version"
-          echo "$COPA_VERSION=$version" >> $GITHUB_OUTPUT
+          echo "COPA_VERSION=$version" >> $GITHUB_OUTPUT
 
       - name: Install Copa
         run: |
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build Copa Action Image
         run: |
-          docker build --build-arg copa_version=${{ steps.copa-version.outputs.copa-version }} -t copa-action .
+          docker build --build-arg copa_version=${{ steps.copa-version.outputs.COPA_VERSION }} -t copa-action .
 
       - name: Set up Docker
         if: matrix.test-type == 'custom-socket'
