--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,7 @@ jobs:
         run: |
           socket="/var/run/docker.sock"
 
-          if "${{ matrix.test-type }}" == "custom-sock"; then
+          if ["${{ matrix.test-type }}" == "custom-sock"]; then
             url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
             socket=$(echo "$url" | awk -F// '{print $2}')
           fin
