--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        test-type: ["buildx", "buildkit-container", "custom-socket"]
+        test-type: ["custom-socket"]
     steps:
       - name: Setup BATS
         uses: mig4/setup-bats@af9a00deb21b5d795cabfeaa8d9060410377686d # v1.2.0
@@ -67,6 +67,9 @@ jobs:
           set -ex
           socket="/var/run/docker.sock"
 
+          docker context use default
+          docker images
+
           if [ "${{ matrix.test-type }}" = "custom-socket" ]; then
             url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
             socket=$(echo "$url" | awk -F// '{print $2}')
@@ -80,4 +83,9 @@ jobs:
             --name=copa-action \
             copa-action 'docker.io/openpolicyagent/opa:0.46.0' 'opa.0.46.0.json' '0.46.0-patched' '10m' "${{ matrix.test-type }}" 'openvex' 'output.json'
           docker images
+
+
+          docker context use default
+          docker images
+
           bats --print-output-on-failure ./test/test.bats
