--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        test-type: ["custom-socket"]
+        test-type: ["buildx", "buildkit-container", "custom-socket"]
     steps:
       - name: Setup BATS
         uses: mig4/setup-bats@af9a00deb21b5d795cabfeaa8d9060410377686d # v1.2.0
@@ -65,27 +65,24 @@ jobs:
       - name: Bats Test
         run: |
           set -ex
-          socket="/var/run/docker.sock"
-
-          docker context use default
-          docker images
+          export SOCKET="/var/run/docker.sock"
 
           if [ "${{ matrix.test-type }}" = "custom-socket" ]; then
             url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
-            socket=$(echo "$url" | awk -F// '{print $2}')
+            SOCKET=$(echo "$url" | awk -F// '{print $2}')
           fi
+
+          docker images
+          docker context use default
 
           docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
-            --mount=type=bind,source="$socket",target=/var/run/docker.sock \
+            --mount=type=bind,source="$SOCKET",target=/var/run/docker.sock \
             --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT \
             --name=copa-action \
             copa-action 'docker.io/openpolicyagent/opa:0.46.0' 'opa.0.46.0.json' '0.46.0-patched' '10m' "${{ matrix.test-type }}" 'openvex' 'output.json'
-          docker images
-
-
-          docker context use default
+          
           docker images
 
           bats --print-output-on-failure ./test/test.bats
