--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -79,11 +79,5 @@ jobs:
             --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT \
             --name=copa-action \
             copa-action 'docker.io/openpolicyagent/opa:0.46.0' 'opa.0.46.0.json' '0.46.0-patched' '10m' "${{ matrix.test-type }}" 'openvex' 'output.json'
-          
-          docker images
 
-          echo "$DOCKER_DRIVER"
-          echo "$DOCKER_HOST"
-          echo "$DOCKER_TLS_CERTDIR"
-
-          bats --print-output-on-failure ./test/test.bats
+          bats --print-output-on-failure ./test/test.bats $SOCKET
