try w env variable
Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -80,4 +80,4 @@ jobs:
             --name=copa-action \
             copa-action 'docker.io/openpolicyagent/opa:0.46.0' 'opa.0.46.0.json' '0.46.0-patched' '10m' "${{ matrix.test-type }}" 'openvex' 'output.json'
 
-          bats --print-output-on-failure ./test/test.bats $SOCKET
+          SOCKET=$SOCKET bats --print-output-on-failure ./test/test.bats
