--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,6 +82,6 @@ jobs:
 
           docker context ls
           docker images
-          docker save -o patched.tag openpolicyagent/opa:0.46.0
+          docker -c "setup-docker-action" save -o patched.tar openpolicyagent/opa:0.46.0-patched
 
           SOCKET=$SOCKET bats --print-output-on-failure ./test/test.bats
